Restructured code, override replaced with `customize-cra`, maintenance tools changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cam-client-app",
   "demo-server": "http://cam.lilliputten.ru/",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "changed": "2020.10.18, 20:05",
   "author": "lilliputten <igor@lilliputten.ru>",
   "license": "MIT",
@@ -36,6 +36,10 @@
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/webpack-env": "^1.15.3",
+    "babel-plugin-directory-resolver": "^1.2.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "customize-cra": "^1.0.0",
     "dateformat": "^3.0.3",
     "es5-shim": "^4.5.14",
     "eslint": "^6.8.0",
@@ -86,6 +90,8 @@
     "postinstall-patches": "echo --Apply patches (posix commands used)-- && cd \"!Patches\" && pwd && sh ./patch-tool-apply-all && cd ..",
     "postinstall-publish-submodule": "echo --Install publish submodule (posix commands used)-- && sh ./util-publish-init.sh",
     "postinstall": "echo --Run postinstall tasks-- && npm-run-all postinstall-patches postinstall-publish-submodule",
+    "webpack-clear-cache": "echo --Clear webpack cache-- && rm -rf node_modules/.cache && echo Ok",
+    "jest-clear-cache": "echo --Clear jest cache-- && jest --clearCache",
     "start": "react-app-rewired start",
     "server": "echo --Start developer server-- && react-app-rewired start",
     "eslint": "echo --JS source code linting-- && eslint . --ext .js && echo No JS problems found",
