--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "unusedDependencies": {},
   "devDependencies": {
+    "@bem-react/classname": "^1.5.8",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
